ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
      nginx-ingress.kubernetes.io/rewrite-target: /
      # nginx.ingress.kubernetes.io/secure-backends: "true"
      # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/proxy-buffering: "on"
      # nginx.ingress.kubernetes.io/server-snippet: |
      #   # add_header Strict-Transport-Security "max-age=86400; includeSubDomains" always;
      #   set $block_common_exploits 0;
      #   if ($query_string ~ "(<|%3C).*script.*(>|%3E)") {
      #       set $block_common_exploits 1;
spec:
  rules:
  - host: vishnu.local.com
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
  - host: vishnu.local.com
    http:
      paths:
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5678
  - host: vishnu.local.com
    http:
      paths:
        - path: /hello
          backend:
            serviceName: hello-world-service
            servicePort: 8080
